// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Select correctly 1`] = `
<DocumentFragment>
  <div
    class="af-form__select-container"
  >
    <select
      class="af-form__input-select"
      id="muid"
      name="placeName"
    >
      <option
        value="fun"
      >
        For fun
      </option>
      <option
        value="work"
      >
        For work
      </option>
      <option
        value="drink"
      >
        For drink
      </option>
    </select>
    <span
      aria-controls="muid"
      class="glyphicon glyphicon-menu-down"
    />
  </div>
</DocumentFragment>
`;

exports[`renders Select with categories correctly 1`] = `
<DocumentFragment>
  <div
    class="af-form__select-container"
  >
    <select
      class="af-form__input-select"
      id="muid"
      name="placeName"
    >
      <optgroup
        label="Color"
      >
        <option
          value="red"
        >
          Red
        </option>
        <option
          value="blue"
        >
          Blue
        </option>
        <option
          value="green"
        >
          Green
        </option>
      </optgroup>
      <optgroup
        label="Size"
      >
        <option
          value="small"
        >
          Small size
        </option>
        <option
          value="medium"
        >
          Medium size
        </option>
        <option
          value="large"
        >
          Large size
        </option>
      </optgroup>
    </select>
    <span
      aria-controls="muid"
      class="glyphicon glyphicon-menu-down"
    />
  </div>
</DocumentFragment>
`;

exports[`renders SelectBase correctly 1`] = `
<DocumentFragment>
  <div
    class="af-form__select-container"
  >
    <select
      class="af-form__input-select"
      id="muid"
      name="placeName"
    >
      <option
        value="fun"
      >
        For fun
      </option>
      <option
        value="work"
      >
        For work
      </option>
      <option
        value="drink"
      >
        For drink
      </option>
    </select>
    <span
      aria-controls="muid"
      class="glyphicon glyphicon-menu-down"
    />
  </div>
</DocumentFragment>
`;

exports[`renders SelectInput correctly 1`] = `
<DocumentFragment>
  <div
    class="row af-form__group"
  >
    <div
      class="col-md-2"
    >
      <label
        class="af-form__group-label"
        for="muid"
      >
        label
      </label>
    </div>
    <div
      class="col-md-10"
    >
      <div
        class="af-form__select"
      >
        <div
          class="af-form__select-container"
        >
          <select
            class="af-form__input-select"
            id="muid"
            name="placeName"
          >
            <option
              value="fun"
            >
              For fun
            </option>
            <option
              value="work"
            >
              For work
            </option>
            <option
              value="drink"
            >
              For drink
            </option>
          </select>
          <span
            aria-controls="muid"
            class="glyphicon glyphicon-menu-down"
          />
        </div>
      </div>
      <small
        class="af-form__help"
      >
        Enter the place type
      </small>
    </div>
  </div>
</DocumentFragment>
`;
